Ensure the drawer doesn't have a x axis scroll when on mobile.

--- a/src/css/media-queries.less
+++ b/src/css/media-queries.less
@@ -1,3 +1,15 @@
+@media (max-width: 420px) {
+  .drawer {
+    width: 325px;
+
+    p {
+      word-wrap: break-word;
+      word-break: break-word;
+      max-width: 325px;
+    }
+  }
+}
+
 @media (max-width: 490px) {
   .hero {
     .post-item {
